    A class SimpleTroveSource has been added that, when subclassed and given
    access to the troves, will allow you to call findTroves to search that 
    source.  The same code is used in update code to unify updating from
    the repository and from changesets, and it is used to provide the search
    capabilities for the local database.

Changes in 0.61.9:
  * Fix a bug added in 0.61.8 that breaks tag handlers 

Changes in 0.61.8:
  * Fix a bug introduced in 0.61.7 that occurred when, in the repository,
    either the Users table or Groups table was empty when creating a new group.
  * Add --buildreqs, --flavors options to q and rq.
  * Primary troves should not have their trove change sets overridden by
    items recursively included (and fixed a pile of things this broke).
  * Locally stored change sets can't always get access to pristine files
    from the local filesystem; when it can't, make sure file sha1 checking
    doesn't get upset.
  * Unchanged troves in updated groups could be erased by items in the
    same group on a different branch.
  * The "conary q[uery]" command accepts a --diff option.  When --diff
    is used, the difference between installed and pristine troves is
    displayed.
  * An additional progress callback has been added to show when database
    transactions are committed

Changes in 0.61.7:
  * Several bugs related to updating two troves with the same name have been 
    fixed - including branch affinity, flavor affinity, correct handling of 
    already updated troves, and correct handling of empty flavors.
  * "conary emerge" as root (or as a user than can apply the changeset
    produced by the build) did not install anything but the toplevel
    package.  This bug has been fixed.
  * No longer hide descriptive TroveNotFound errors behind a generic 
    NoNewTroves wrapper.
  * Group recipes can now request that dependencies be resolved and
    added to the group at cook time.  To automatically add required